fix: prev suppression rule

--- a/.editorconfig
+++ b/.editorconfig
@@ -34,6 +34,6 @@ dotnet_analyzer_diagnostic.category-Design.severity = warning
 dotnet_analyzer_diagnostic.category-Usage.severity = warning
 
 # --- Test naming conventions -------------------------------------
-[*/tests/*.cs]
+[**/tests/**/*.cs]
 # Allow underscores in test names (CA1707)
 dotnet_diagnostic.CA1707.severity = none
