--- a/visualizer/Assembly-CSharp.csproj
+++ b/visualizer/Assembly-CSharp.csproj
@@ -64,6 +64,8 @@
     <Analyzer Include="/Applications/Unity/Hub/Editor/2022.3.62f2/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets/Scripts/UnityLayer/BoardHighlights.cs" />
+    <Compile Include="Assets/Scripts/UnityLayer/BoardPieceRegistry.cs" />
     <Compile Include="Assets/Scripts/UnityLayer/MovablePiece.cs" />
     <Compile Include="Assets/Scripts/UnityLayer/HelloEngine.cs" />
     <Compile Include="Assets/Scripts/UnityLayer/GenGrid.cs" />
