add: move generation (sliding pieces)

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ dotnet_style_qualification_for_field = true:suggestion
 dotnet_style_qualification_for_property = true:suggestion
 dotnet_style_qualification_for_method = true:suggestion
 dotnet_style_qualification_for_event = true:suggestion
-dotnet_diagnostic.IDE0005.severity = warning   # Unused using
+dotnet_diagnostic.IDE0005.severity = suggestion
 dotnet_diagnostic.CA1510.severity = none
 
 # Analyzer tweaks (engine-focused)
@@ -39,6 +39,15 @@ dotnet_diagnostic.CA1304.severity = none
 
 # CA1307: Specify StringComparison for clarity
 dotnet_diagnostic.CA1307.severity = none
+
+# CA1810: Initialize reference type static fields inline
+dotnet_diagnostic.CA1810.severity = none
+
+# CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider adding the 'required' modifier or declaring as nullable.
+dotnet_diagnostic.CS8618.severity = none
+
+# CA1823: Avoid unused private fields
+dotnet_diagnostic.CA1823.severity = suggestion
 
 [**/tests/**/*.cs]
 # Allow underscores in test names (CA1707)
