--- a/.editorconfig
+++ b/.editorconfig
@@ -15,11 +15,12 @@ csharp_preferred_modifier_order = public, private, protected, internal, static, 
 csharp_style_var_for_built_in_types = false:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
 csharp_style_var_elsewhere = false:suggestion
-dotnet_style_qualification_for_field = true:suggestion
-dotnet_style_qualification_for_property = true:suggestion
-dotnet_style_qualification_for_method = true:suggestion
-dotnet_style_qualification_for_event = true:suggestion
+dotnet_style_qualification_for_field = true:none
+dotnet_style_qualification_for_property = true:none
+dotnet_style_qualification_for_method = true:none
+dotnet_style_qualification_for_event = true:none
 dotnet_diagnostic.IDE0005.severity = suggestion
+dotnet_diagnostic.IDE0055.severity = suggestion;
 dotnet_diagnostic.CA1510.severity = none
 
 # Analyzer tweaks (engine-focused)
@@ -48,6 +49,12 @@ dotnet_diagnostic.CS8618.severity = none
 
 # CA1823: Avoid unused private fields
 dotnet_diagnostic.CA1823.severity = suggestion
+
+# CA1711: Identifiers should not have incorrect suffix
+dotnet_diagnostic.CA1711.severity = none
+
+# IDE0009: Member access should be qualified.
+dotnet_diagnostic.IDE0009.severity = none
 
 [**/tests/**/*.cs]
 # Allow underscores in test names (CA1707)
