--- a/.editorconfig
+++ b/.editorconfig
@@ -62,6 +62,9 @@ dotnet_diagnostic.CA1051.severity = suggestion
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = none
 
+# CA1062: Validate arguments of public methods
+dotnet_diagnostic.CA1062.severity = none
+
 [**/tests/**/*.cs]
 # Allow underscores in test names (CA1707)
 dotnet_diagnostic.CA1707.severity = none
