--- a/.editorconfig
+++ b/.editorconfig
@@ -57,13 +57,16 @@ dotnet_diagnostic.CA1711.severity = none
 dotnet_diagnostic.IDE0009.severity = none
 
 # CA1051: Do not declare visible instance fields
-dotnet_diagnostic.CA1051.severity = suggestion
+dotnet_diagnostic.CA1051.severity = none
 
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = none
 
 # CA1062: Validate arguments of public methods
 dotnet_diagnostic.CA1062.severity = none
+
+# CA1815: Override equals and operator equals on value types
+dotnet_diagnostic.CA1815.severity = none
 
 [**/tests/**/*.cs]
 # Allow underscores in test names (CA1707)
